refactor: finish clean code for config event exception export